connecting index.html to js

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -17,8 +17,7 @@
   <pre id="results"></pre>
    
   <script>
-    // Students need to implement the JavaScript code here
-    // This includes fetching data from the REST API and handling the responses.
+    // Implement the JavaScript code to fetch data from the API here
   </script>
 </body>
 </html>
